Kong-Api-Gateway-Research/Kong-Keycloak-OIDC-Architecture/apps/1-retail-banking/0-gatewayclass-retail-banking.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: retail-banking-kong-gatewayclass
  annotations:
    konghq.com/gatewayclass-unmanaged: "true"
spec:
  controllerName: konghq.com/retail-banking-kong-gateway-controller
