Kong-Api-Gateway-Research/Kong-Keycloak-OIDC-Architecture/apps/1-retail-banking/3-customer-profile.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: retail-banking-ns
  name: retail-banking-ns
---
apiVersion: v1
kind: Service
metadata:
  name: customer-profile-svc
  namespace: retail-banking-ns
spec:
  selector:
    app: customer-profile-svc
  ports:
    - port: 8081
      targetPort: 9091
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-profile-svc
  namespace: retail-banking-ns
  labels:
    app: customer-profile-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-profile-svc
  template:
    metadata:
      labels:
        app: customer-profile-svc
    spec:
      serviceAccountName: customer-profile-svc
      containers:
        - name: customer-profile-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9091
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
