Kong-Api-Gateway-Research/Kong-Keycloak-OIDC-Architecture/apps/1-retail-banking/5-statement.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: statement-svc
  namespace: retail-banking-ns
spec:
  selector:
    app: statement-svc
  ports:
    - port: 8083
      targetPort: 9093
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statement-svc
  namespace: retail-banking-ns
  labels:
    app: statement-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statement-svc
  template:
    metadata:
      labels:
        app: statement-svc
    spec:
      serviceAccountName: statement-svc
      containers:
        - name: statement-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9093
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
